:art: 상품, 커뮤니티 toDto 메서드 정리